# server/api/Dtos/CreatePlayerDto.cs
@@ -1,0 +1,3 @@
+﻿namespace api.Dtos;
+
+public record CreatePlayerDto(string Email, string Name);
