# server/api/Services/IPlayerService.cs
@@ -1,0 +1,12 @@
+﻿using api.Dtos;
+using dataccess.Entities;
+using Microsoft.AspNetCore.Mvc;
+
+namespace api.Services;
+
+public interface IPlayerService
+{
+    Task<Player> CreatePlayer(CreatePlayerDto dto);
+    
+    Task<List<Player>> GetAllPlayers();
+}
